# content-aware-image-resize

./: .gitignore  .travis.yml  Cargo.toml  README.md
lib/: Cargo.toml  mod.rs  pixel.rs  resize.rs  vec2d.rs
src/: main.rs  mod.rs  pixel.rs  resize.rs
