[package]

name = "content-aware-image-resize"
version = "0.0.0"
authors = [
  "Zeke Foppa <benjamin.foppa@gmail.com>",
]

[[bin]]
name = "main"
path = "src/mod.rs"

[dependencies]
argparse = "*"
clippy = "*"
env_logger= "*"
log = "*"
num = "*"
time = "*"

[dependencies.image]
git = "https://github.com/bfops/image"
